--- a/manifest.json
+++ b/manifest.json
@@ -1,50 +1,19 @@
 {
-    "name": "Plataforma D&D Online",
-    "short_name": "D&D Platform",
-    "description": "Plataforma para jogar Dungeons & Dragons online",
+    "name": "Plataforma D&D",
+    "short_name": "D&D",
+    "description": "Plataforma para jogar Dungeons & Dragons",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#1a1a2e",
     "theme_color": "#5e35b1",
-    "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "icons/icon-72x72.png",
-            "sizes": "72x72",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-96x96.png",
-            "sizes": "96x96",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-128x128.png",
-            "sizes": "128x128",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-144x144.png",
-            "sizes": "144x144",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-152x152.png",
-            "sizes": "152x152",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-192x192.png",
+            "src": "https://cdn-icons-png.flaticon.com/512/685/685816.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-512x512.png",
+            "src": "https://cdn-icons-png.flaticon.com/512/685/685816.png",
             "sizes": "512x512",
             "type": "image/png"
         }
